--- a/app/src/main/res/layout/activity_stream_chooser.xml
+++ b/app/src/main/res/layout/activity_stream_chooser.xml
@@ -23,24 +23,12 @@
             android:layout_centerHorizontal="true"
             android:layout_margin="50dp" />
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textAppearance="?android:attr/textAppearanceLarge"
-            android:text="Select Stream"
-            android:id="@+id/textView5"
-            android:layout_below="@+id/imageView2"
-            android:layout_centerHorizontal="true"
-            android:layout_marginTop="25dp"
-            android:layout_marginBottom="25dp"
-            android:textColor="@color/colorPrimaryDark" />
-
         <Spinner
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/spinner"
-            android:layout_below="@+id/textView5"
-            android:layout_centerHorizontal="true" />
+            android:layout_centerHorizontal="true"
+            android:layout_below="@+id/imageView2" />
 
         <Button
             android:layout_width="wrap_content"
