--- a/app/src/main/res/menu/menu_time_table.xml
+++ b/app/src/main/res/menu/menu_time_table.xml
@@ -1,16 +1,24 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     tools:context=".MainActivity">
 
     <!--Change Stream-->
     <item
         android:id="@+id/action_change_stream"
-        android:icon="@drawable/ic_swap_calls_black_24dp"
-        android:title="Change Stream" />
+        android:title="Change Stream"
+        app:showAsAction="never" />
+
+    <!--Share-->
+    <item
+        android:id="@+id/action_share"
+        android:icon="@drawable/ic_share_white_24dp"
+        android:title="Feedback"
+        app:showAsAction="ifRoom" />
 
     <!--Feedback-->
     <item
         android:id="@+id/action_feedback"
-        android:icon="@drawable/ic_feedback_black_24dp"
-        android:title="Feedback" />
+        android:title="Feedback"
+        app:showAsAction="never" />
 </menu>
