--- a/app/src/main/res/layout/activity_time_table.xml
+++ b/app/src/main/res/layout/activity_time_table.xml
@@ -21,7 +21,7 @@
                 android:id="@+id/main_table"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:padding="25dp" />
+                android:padding="16dp" />
 
 
         </HorizontalScrollView>
@@ -44,7 +44,8 @@
             android:layout_below="@+id/sv"
             android:layout_centerHorizontal="true"
             android:padding="16dp"
-            android:textAppearance="?android:attr/textAppearanceSmall" />
+            android:textAppearance="?android:attr/textAppearanceSmall"
+            android:visibility="gone" />
 
         <TextView
             android:id="@+id/stream"
