--- a/app/src/main/res/menu/menu_time_table.xml
+++ b/app/src/main/res/menu/menu_time_table.xml
@@ -13,7 +13,7 @@
     <item
         android:id="@+id/action_share"
         android:icon="@drawable/ic_share_white_24dp"
-        android:title="Feedback"
+        android:title="Share"
         app:showAsAction="ifRoom" />
 
     <!--Feedback-->
