--- a/app/src/main/res/menu/menu_time_table.xml
+++ b/app/src/main/res/menu/menu_time_table.xml
@@ -9,11 +9,17 @@
         android:title="Change Stream"
         app:showAsAction="never" />
 
-    <!--Share-->
+    <!--Share Timetable-->
     <item
-        android:id="@+id/action_share"
+        android:id="@+id/actioon_share_timetable"
+        android:title="Share Timetable"
+        app:showAsAction="never" />
+
+    <!--Share App-->
+    <item
+        android:id="@+id/action_share_app"
         android:icon="@drawable/ic_share_white_24dp"
-        android:title="Share"
+        android:title="Share App"
         app:showAsAction="ifRoom" />
 
     <!--Feedback-->
