--- a/app/src/main/res/layout/activity_time_table.xml
+++ b/app/src/main/res/layout/activity_time_table.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="match_parent"
+    android:background="@drawable/overlay">
 
     <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="match_parent"
@@ -13,7 +14,9 @@
             android:layout_height="match_parent"
             android:layout_alignParentLeft="true"
             android:layout_alignParentStart="true"
-            android:layout_below="@+id/stream">
+            android:layout_below="@+id/stream"
+            android:elevation="5dp"
+            android:translationZ="5dp">
 
 
             <TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
@@ -36,10 +39,10 @@
             android:layout_below="@+id/sv"
             android:layout_centerHorizontal="true"
             android:layout_centerVertical="true"
-            android:elevation="5dp"
+            android:elevation="10dp"
             android:indeterminate="false"
             android:padding="50dp"
-            android:translationZ="5dp" />
+            android:translationZ="10dp" />
 
         <TextView
             android:id="@+id/updated"
@@ -60,10 +63,13 @@
             android:layout_alignParentTop="true"
             android:layout_centerHorizontal="true"
             android:layout_marginTop="16dp"
+            android:background="@drawable/button_bg"
             android:elevation="5dp"
+            android:padding="5dp"
             android:textAppearance="?android:attr/textAppearanceLarge"
-            android:textColor="@color/colorPrimaryDark"
-            android:translationZ="5dp" />
+            android:textColor="#fff"
+            android:translationZ="5dp"
+            android:onClick="onClickStream" />
 
         <ListView
             android:id="@+id/listView"
@@ -72,8 +78,9 @@
             android:layout_below="@+id/updated"
             android:layout_centerHorizontal="true"
             android:layout_marginBottom="25dp"
-            android:layout_marginLeft="25dp"
-            android:layout_marginRight="25dp"
+            android:layout_marginLeft="16dp"
+            android:layout_marginRight="16dp"
+            android:layout_marginTop="16dp"
             android:background="@drawable/border2"
             android:elevation="5dp"
             android:padding="16dp"
