--- a/app/src/main/res/menu/menu_time_table.xml
+++ b/app/src/main/res/menu/menu_time_table.xml
@@ -3,6 +3,13 @@
     xmlns:tools="http://schemas.android.com/tools"
     tools:context=".MainActivity">
 
+    <!--Settings-->
+    <item
+        android:id="@+id/action_settings"
+        android:icon="@drawable/ic_settings_white_24dp"
+        android:title="Settings"
+        app:showAsAction="ifRoom" />
+
     <!--Change Stream-->
     <item
         android:id="@+id/action_change_stream"
@@ -25,6 +32,7 @@
     <!--Feedback-->
     <item
         android:id="@+id/action_feedback"
+        android:icon="@drawable/ic_feedback_white_24dp"
         android:title="Feedback"
-        app:showAsAction="never" />
+        app:showAsAction="ifRoom" />
 </menu>
