--- a/app/src/main/res/layout/content_settings.xml
+++ b/app/src/main/res/layout/content_settings.xml
@@ -36,14 +36,12 @@
             android:textSize="20sp" />
 
         <TextView
-            android:id="@+id/textView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentLeft="true"
             android:layout_alignParentStart="true"
             android:layout_below="@+id/switch1"
             android:text="The notifications are about extra classes and other college related events"
-            android:textAppearance="?android:attr/textAppearanceSmall"
-            android:textColor="#000" />
+            android:textAppearance="?android:attr/textAppearanceSmall" />
     </RelativeLayout>
 </RelativeLayout>
