--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -32,7 +32,6 @@
     <!--Feedback-->
     <item
         android:id="@+id/action_feedback"
-        android:icon="@drawable/ic_feedback_white_24dp"
         android:title="Feedback"
-        app:showAsAction="ifRoom" />
+        app:showAsAction="never" />
 </menu>
