--- a/app/src/main/res/layout/fragment_time_table.xml
+++ b/app/src/main/res/layout/fragment_time_table.xml
@@ -13,7 +13,11 @@
             android:layout_height="match_parent"
             android:layout_alignParentLeft="true"
             android:layout_alignParentStart="true"
-            android:layout_below="@+id/stream">
+            android:layout_below="@+id/stream"
+            android:paddingLeft="2dp"
+            android:paddingTop="16dp"
+            android:paddingRight="2dp"
+            android:paddingBottom="16dp">
 
 
             <TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
@@ -22,7 +26,6 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:elevation="5dp"
-                android:padding="16dp"
                 android:translationZ="5dp" />
 
 
@@ -48,7 +51,6 @@
             android:layout_below="@+id/sv"
             android:layout_centerHorizontal="true"
             android:elevation="5dp"
-            android:padding="16dp"
             android:textAppearance="?android:attr/textAppearanceSmall"
             android:translationZ="5dp"
             android:visibility="visible" />
