--- a/app/src/main/res/layout/activity_stream_chooser.xml
+++ b/app/src/main/res/layout/activity_stream_chooser.xml
@@ -23,7 +23,7 @@
         <Button
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:background="@drawable/button_bg"
+            android:background="@drawable/button_bg1"
             android:onClick="onClickContinue"
             android:padding="5dp"
             android:text="Continue"
