--- a/app/src/main/res/layout/fragment_notifications.xml
+++ b/app/src/main/res/layout/fragment_notifications.xml
@@ -2,24 +2,21 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:padding="5dp"
-    tools:context="com.fancy.packagename.rohansharma.timetable.fragment.NotificationsFragment">
+    tools:context="com.fancy.packagename.rohansharma.timetable.fragment.NotificationsFragment"
+    android:paddingBottom="?android:attr/actionBarSize">
 
     <ListView
         android:id="@+id/listView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
-        android:layout_marginBottom="25dp"
-        android:layout_marginLeft="16dp"
-        android:layout_marginRight="16dp"
-        android:layout_marginTop="16dp"
         android:background="@drawable/border2"
         android:divider="#aaa"
         android:dividerHeight="2dp"
         android:elevation="5dp"
         android:padding="16dp"
-        android:translationZ="5dp" />
+        android:translationZ="5dp"
+        android:layout_margin="16dp" />
 
     <RelativeLayout
         android:id="@+id/rl"
