Bug fixed in TimeTableFragment Added stream in analytics

--- a/app/src/main/res/layout/fragment_time_table.xml
+++ b/app/src/main/res/layout/fragment_time_table.xml
@@ -15,19 +15,49 @@
             android:layout_alignParentLeft="true"
             android:layout_alignParentStart="true"
             android:layout_below="@+id/stream"
+            android:paddingBottom="16dp"
             android:paddingLeft="2dp"
-            android:paddingTop="16dp"
             android:paddingRight="2dp"
-            android:paddingBottom="16dp">
+            android:paddingTop="16dp">
 
-
-            <TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
-
-                android:id="@+id/main_table"
+            <RelativeLayout
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_height="match_parent"
+                android:background="@drawable/border2"
                 android:elevation="5dp"
-                android:translationZ="5dp" />
+                android:translationZ="5dp"
+                android:padding="2dp">
+
+                <TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
+
+                    android:id="@+id/main_table"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content" />
+
+                <TextView
+                    android:id="@+id/sat"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignTop="@+id/sat_header"
+                    android:layout_toEndOf="@+id/sat_header"
+                    android:layout_toRightOf="@+id/sat_header"
+                    android:background="@drawable/border2"
+                    android:padding="9dp"
+                    android:textColor="#000" />
+
+                <TextView
+                    android:id="@+id/sat_header"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentLeft="true"
+                    android:layout_alignParentStart="true"
+                    android:layout_below="@+id/main_table"
+                    android:layout_marginTop="10dp"
+                    android:background="@drawable/border4"
+                    android:padding="9dp"
+                    android:text="Sat"
+                    android:textColor="#fff" />
+            </RelativeLayout>
 
 
         </HorizontalScrollView>
@@ -49,14 +79,13 @@
             android:id="@+id/updated"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_below="@+id/sv"
+            android:layout_centerHorizontal="true"
             android:elevation="5dp"
+            android:padding="16dp"
             android:textAppearance="?android:attr/textAppearanceSmall"
             android:translationZ="5dp"
-            android:visibility="visible"
-            android:text="dtjndtjdtjd"
-            android:padding="16dp"
-            android:layout_below="@+id/sat"
-            android:layout_centerHorizontal="true" />
+            android:visibility="visible" />
 
         <TextView
             android:id="@+id/stream"
@@ -71,35 +100,6 @@
             android:textAppearance="?android:attr/textAppearanceLarge"
             android:textColor="#fff"
             android:translationZ="5dp" />
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Sat"
-            android:id="@+id/sat_header"
-            android:layout_below="@+id/sv"
-            android:layout_alignParentLeft="true"
-            android:layout_alignParentStart="true"
-            android:layout_marginLeft="16dp"
-            android:padding="10dp"
-            android:background="@drawable/border4"
-            android:textColor="#fff"
-            android:layout_marginTop="5dp"
-            android:elevation="2dp"
-            android:translationZ="2dp" />
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/sat"
-            android:padding="10dp"
-            android:background="@drawable/border2"
-            android:layout_alignTop="@+id/sat_header"
-            android:layout_toRightOf="@+id/sat_header"
-            android:layout_toEndOf="@+id/sat_header"
-            android:textColor="#000"
-            android:elevation="2dp"
-            android:translationZ="2dp" />
 
     </RelativeLayout>
 </ScrollView>
